# lex-pr-runner

./: .eslintrc.cjs  .gitignore  AGENTS.md  B3-IMPLEMENTATION.md  CONSOLIDATION.md  GATE_REPORT_SCHEMA_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.mcp.md  README.md  SAFETY_FRAMEWORK_IMPLEMENTATION.md  SECURITY_VERIFICATION.md  actual-branches-plan.json  all-open-prs-plan.json  bootstrap-lex-pr-runner.sh  branch-based-plan.json  current-open-prs-plan.json  current-prs-plan.json  dogfooding-findings.md  eslint.config.js  jest.config.js  merge-weave-completion-report.md  merge-weave-execution-report.md  merge-weave-plan.json  minimal-plan.json  package-lock.json  package.json  plan.json  remaining-clean-plan.json  ruff.toml  tsconfig.json  vitest.config.ts
.artifacts1/: plan.json
.artifactsB/: plan.json
.changes/: ci-debug-added.txt
.github/: COST_EFFICIENCY.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.smartergpt/: deps.yml  gates.yml  intent.md  merge-policy.yml  pull-request-template.md  scope.yml  stack.yml
docs/: README.md  SECURITY_IMPLEMENTATION.md  TERMS.md  advanced-cli.md  architecture.md  autopilot-levels.md  autopilot.md  ci-cd-integration.md  cli-mcp-plan.md  cli-mcp-review.md  cli-mcp-weave-reporting.md  cli.md  configuration.md  deliverables-management.md  dependency-parser.md  error-codes.md  error-recovery.md  errors.md  (+15 more)
legacy/: README.md  pyproject.toml
legacy/lex_pr.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
legacy/py-prototype/: cli.py  plan_schema.py  toposort.py
legacy/py-tests/: test_schema.py  test_toposort.py
(+263 files in other folders)
